@@ -100,6 +100,7 @@
   Ethan Mallove			ethan.mallove@sun.com
   Frank Ch. Eigler		fche@cygnus.com
   Fred Cox			sailorfred@yahoo.com
+  Gerald Pfeifer		gerald@pfeifer.com
   H.J. Lu			hjl@gnu.org
   Henning Nielsen Lund		hnl_dk@amigaos.dk
   Howard Chu			hyc@highlandsun.com
